<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/radius_16_3b3b3b"
    android:gravity="center">

    <TextView
        android:id="@+id/confirm_pop_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/Delete"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_pop_tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/Delete_files_confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_pop_tv_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1AFFFFFF"
        app:layout_constraintTop_toTopOf="@id/confirm_pop_tv_cancel" />


    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="#1AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/confirm_pop_tv_cancel" />

    <TextView
        android:id="@+id/confirm_pop_tv_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/Cancel"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/confirm_pop_tv_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_pop_tv_content" />


    <TextView
        android:id="@+id/confirm_pop_tv_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/Delete"
        android:textColor="#FFFF3A43"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/confirm_pop_tv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_pop_tv_cancel"
        app:layout_constraintTop_toTopOf="@id/confirm_pop_tv_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>