<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <View
        android:id="@+id/files_uploading_fragment_layout_iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@mipmap/calendar_icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/files_uploading_fragment_layout_tv_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UploadList"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/files_uploading_fragment_layout_iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/files_uploading_fragment_layout_iv_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/files_uploading_fragment_layout_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/files_uploading_fragment_layout_upload"
        app:layout_constraintTop_toBottomOf="@id/files_uploading_fragment_layout_tv_files"
        tools:listitem="@layout/calendar_files_uploading_item" />

    <TextView
        android:id="@+id/files_uploading_fragment_layout_upload"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/radius_12_1af6"
        android:gravity="center"
        android:text="@string/Upload"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.zj.loading.ZRotateLoadingView
        android:id="@+id/files_uploading_fragment_layout_blv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        app:backgroundFill="@color/black"
        app:backgroundUnderTheContent="@drawable/radius_16_3b3b3b"
        app:drawerHeight="180dp"
        app:drawerWidth="180dp"
        app:hintColor="#fff"
        app:hintMarginBottom="4dp"
        app:hintMarginTop="16dp"
        app:hintTextSize="16sp"
        app:hintTextStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/files_uploading_fragment_layout_rv"
        app:layout_constraintTop_toTopOf="@id/files_uploading_fragment_layout_rv"
        app:loading_height="45dp"
        app:loading_width="45dp"
        app:noDataText="@string/No_File"
        app:no_data_height="160dp"
        app:no_data_width="160dp"
        app:refreshTextColor="#99ffffff"
        app:refreshTextSize="14sp"
        app:rotate_loadingRes="@drawable/icon_loading"
        app:rotate_noDataRes="@mipmap/schedule_file_list_no_file"
        app:shownMode="overlap"
        app:viewGravity="center" />

</androidx.constraintlayout.widget.ConstraintLayout>