<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/calendar_schedule_detail_iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/calendar_icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_iv_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.zj.schedule.cv.ScheduleHeaderView
                android:id="@+id/calendar_schedule_detail_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.zj.views.list.views.EmptyRecyclerView
                android:id="@+id/calendar_schedule_detail_rv_files"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:overScrollMode="never"
                android:paddingBottom="64dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.zj.schedule.cv.ScheduleNavBar
        android:id="@+id/calendar_schedule_detail_nav"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/radius_32_272727"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

    <com.zj.loading.ZRotateLoadingView
        android:id="@+id/calendar_schedule_detail_blv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:backgroundFill="@color/black"

        app:btnBackground="@drawable/radius_12_f65f2a"
        app:btnEnable="true"
        app:btnMarginTop="24dp"
        app:btnPaddingBottom="12dp"
        app:btnPaddingLeft="24dp"
        app:btnPaddingRight="24dp"
        app:btnPaddingTop="12dp"
        app:btnText="@string/No_schedule"
        app:btnTextColor="#fff"
        app:btnTextSize="14sp"

        app:drawerHeight="160dp"
        app:drawerWidth="160dp"

        app:hintColor="#fff"
        app:hintMarginBottom="4dp"
        app:hintMarginTop="16dp"
        app:hintTextSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_iv_back"
        app:loadingText="@string/Loading"
        app:loading_height="45dp"
        app:loading_width="45dp"

        app:noDataText="@string/No_schedule"
        app:no_data_height="160dp"
        app:no_data_width="160dp"
        app:refreshNoDataText="@string/No_schedule_hint_txt"
        app:refreshTextColor="#99ffffff"
        app:refreshTextSize="14sp"
        app:rotate_loadingRes="@drawable/icon_loading"
        app:rotate_noDataRes="@mipmap/schedule_no_data"
        app:shownMode="overlap"
        app:viewGravity="bottom|center" />

</androidx.constraintlayout.widget.ConstraintLayout>