<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="#000"
    tools:parentTag="com.zj.schedule.cv.ScheduleHeaderView">

    <TextView
        android:id="@+id/calendar_schedule_detail_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="U-TOWN Product launch will be released on time in March 2022📢" />

    <TextView
        android:id="@+id/calendar_schedule_detail_tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/radius_12_ff4e4e4e"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingStart="8dp"
        android:paddingTop="2dp"
        android:paddingEnd="8dp"
        android:paddingBottom="2dp"
        android:textColor="@color/c_6fff"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_tv_name"
        tools:ignore="TextContrastCheck"
        tools:text="Ended" />

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_dtv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="12dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_gravity="LEFT"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_time"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_tv_status" />

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_dtv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:dtv_background="@drawable/radius_4_33ffffff"
        app:dtv_drawableHeight="16dp"
        app:dtv_drawablePadding="4dp"
        app:dtv_drawableWidth="16dp"
        app:dtv_gravity="LEFT"
        app:dtv_padding="8dp"
        app:dtv_paddingBottom="4dp"
        app:dtv_paddingTop="4dp"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_time"
        app:dtv_textColor="#fff"
        app:dtv_textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_time" />


    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_dtv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="12dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_gravity="LEFT"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_id"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_duration" />

    <LinearLayout
        android:id="@+id/calendar_schedule_detail_ll_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_id">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/calendar_icon_schedule_detail_key" />

        <TextView
            android:id="@+id/calendar_schedule_detail_tv_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="#ccffffff"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/calendar_schedule_detail_iv_key"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="2dp"
            android:padding="10dp"
            android:src="@drawable/calendar_schedule_detail_key_show" />

    </LinearLayout>

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_dtv_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="12dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_gravity="LEFT"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_owner"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_ll_key" />

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_dtv_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="12dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_gravity="LEFT"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_host"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_owner" />

    <LinearLayout
        android:id="@+id/calendar_schedule_detail_ll_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_host">

        <View
            android:id="@+id/split_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#1AFFFFFF" />

        <TextView
            android:id="@+id/calendar_schedule_detail_tv_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#fff"
            android:textSize="14sp"
            tools:text="@string/Member_" />

        <com.zj.schedule.cv.CollapsedLayout
            android:id="@+id/calendar_schedule_detail_cl_ivs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <View
        android:id="@+id/split_line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="#1AFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_ll_member" />

    <TextView
        android:id="@+id/calendar_schedule_detail_tv_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/split_line1"
        tools:text="@string/Meeting_Folder_" />

    <TextView
        android:id="@+id/calendar_schedule_detail_tv_removed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Meeting_removed_hint"
        android:textColor="@color/c_6fff"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/split_line1" />

</merge>